1.01
-----------------------
- Listen on LAT multicast address so you don't need to put the interface
  into "allmulti" mode, or have DECnet running
- Deleting ports now works
- Linux latd can talk to another Linux latd now (though not to itself)


1.0 17th September 2000
-----------------------
- Support BREAK character
- Added support for a group (gid) called "lat". If you have one of these
  in /etc/groups then users with that group can connect to reverse-LAT
  ports with no other privileges
- Added startup script
- Remove "LAT started", "LAT stopped" messages from latcp as they interfere 
  with the startup script and it's "not the Unix way"
- Added RPM build target
- Added DEB build target
- Forced all node names & service names to be uppercase in latcp
- Split -DOLDSTUFF into two bits: -DUSE_OPENPTY and -DSETLOGIN_HOST. The
  second option doesn't work on SuSE 6.4, but does on Debian 2.2 and RedHat
  6.2, the first should be fine on anything later than RedHat 5.2 (libc 2.0
  I think that means)


0.9 14th August 2000
--------------------
- latcp now shows local ports too
- Send group numbers with queued connect request
- Increased maximum number of connections to 254
- Fixed confusion when you had a reverse LAT session to the
  same terminal server and referred to them by port names.
- Fixed disappearing ports when using two queued reverse LAT
  connections to the same terminal server


0.8 25th July 2000
------------------
- Don't die if a terminal server user presses ^C
- Added groups for incoming and outgoing services
- latcp is no longer on the path in latd.conf. Instead use the environment
  variable $LATCP to invoke latcp.
- Added support for queued outgoing connections
- Don't accept services until latcp has finished


0.7  7th June 2000
------------------
- Add keepalive timer
- Add latcp control of keepalive timer & retransmit limit
- Fixed crash if you run out of PTYs
- Add latcp -d command to show daemon configuration. Use latcp -d -l to